--- a/file.html
+++ b/file.html
@@ -179,7 +179,7 @@ button {
     <!-- 原始 HTML -->
     <div class="card">
       <h3>原始 HTML</h3>
-      <textarea id="input" placeholder="貼上原始 HTML 或手動貼上轉換URL"></textarea>
+      <textarea id="input" placeholder="貼上原始 HTML"></textarea>
     </div>
 
     <!-- 清除後 HTML -->
